# requests-hardened

./: .gitignore  DEVELOP.rst  Dockerfile  LICENSE  Makefile  README.rst  RELEASING.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/requirements/: Makefile  poetry-requirements-hashes.txt  poetry-requirements-no-hashes.txt  poetry-requirements.in  publish-pypi-requirements.in  publish-pypi-requirements.txt
.github/workflows/: check-licenses.yaml  mypy.yaml  publish-pypi.yaml  test.yaml
requests_hardened/: client.py  config.py  host_header_adapter.py  ip_filter.py  ip_filter_adapter.py  manager.py
src/requests_hardened/: __init__.py  client.py  config.py  ip_filter.py  ip_filter_adapter.py  types.py
tests/: conftest.py  http_managers.py  test_default_timeout.py  test_dummy_sni_tls_server.py  test_dummy_tls_server.py  test_ip_filter.py  test_never_allow_redirects.py  test_override_user_agent_header.py  test_ssrf_filter.py  test_ssrf_filter_proxy_support.py  utils.py
tests/http_test_servers/: __init__.py  insecure.py  sni_tls.py  tls.py
tests/http_test_servers/utils/: http_redirects.py
tests/proxy_test_servers/: fixtures.py  server.py
