[build-system]
# Note: uv_build version constraints must match the uv version, e.g., if you have
#       'uv==0.11.3' installed but you put 'uv_build>=0.10.0,<0.11.0' then the
#       version will mismatch (which will prevent uv from installing a "compatible"
#       uv_build version).
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "requests-hardened"
readme = "README.rst"
description = "A library that overrides the default behaviors of the requests library, and adds new security features."
authors = [
    { name = "Saleor Commerce", email = "hello@saleor.io>" }
]
license = "BSD-3-Clause"
version = "1.3.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Topic :: Security",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# NOTE: make sure to update ./.github/requirements/.python_version.
#       Must be set to the lowest Python version that it is supported by this project.
requires-python = ">=3.10"
dependencies = [
    # We require >=2.32.3 due to depending on `get_connection_with_tls_context`.
    "requests>=2.32.3,<3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<10.0.0",
    "mypy>=1.5.1,<2.2.0",
    "types-requests>=2.32.0,<3.0.0",
    "trustme>=1.1.0,<2.0.0",
    "pytest-socket>=0.7.0,<8.0.0",
    "pproxy>=2.7.9,<2.8.0",
    "requests[socks]>=2.32.3,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/saleor/requests-hardened/"
Source = "https://github.com/saleor/requests-hardened/"
Issues = "https://github.com/saleor/requests-hardened/issues"
Changelog = "https://github.com/saleor/requests-hardened/releases/"

[tool.pytest.ini_options]
# Disallow creating sockets (using 'pytest-socket' library)
# We block sockets during tests in order to detect unexpected
# leaks/connections being made.
#
# --allow-unix-socket is needed in order to create test proxy
# servers in our tests.
addopts = "--disable-socket --allow-unix-socket"

[tool.mypy]
# Checks
check_untyped_defs = true
ignore_missing_imports = true
allow_redefinition = true

# Error messages
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true

exclude = [
    "tests/"
]
